# game.libretro.beetle-psx

./: CMakeLists.txt
depends/common/beetle-psx/: CMakeLists.txt  beetle-psx.txt
game.libretro.beetle-psx/: addon.xml  addon.xml.in
game.libretro.beetle-psx/resources/: settings.xml
game.libretro.beetle-psx/resources/language/English/: strings.po
